Initial assets for IS Serverside Code guide

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -140,6 +140,7 @@ Interaction Studio (Salesforce Marketing Cloud Personalization) is a cross-chann
 ### Interaction Studio Documentation
 
 - [Catalog Objects Architeture](./interaction-studio/is-catalog-architecture.mdx)
+- [Serverside Code in Campaigns](./interaction-studio/is-serverside-code-in-campaigns.mdx)
 - [Open Time Email Template](./interaction-studio/is-open-time-email.mdx)
 
 ### Interaction Studio Snippets
