Addition of permission scope filtering in MCC

--- a/docs/config/sfmc-mcc-integration-patterns.mdx
+++ b/docs/config/sfmc-mcc-integration-patterns.mdx
@@ -395,6 +395,8 @@ You can make the most of it by creating checkbox flags for your filters, for exa
 
 Keep in mind that those checkboxes cannot be calculated using a formula. You will need to fill them in using the default value, Apex Trigger or Flow (generally any means that triggers record update).
 
+Additionally, you can leverage Integration User permissions for scope limitationso that you can layer different filters. For example - limit permissions to only one RecordType and use boolean to flag records within that RecordType that have consent.
+
 :::
 
 ## Marketing Cloud Connect Best Practices
