Fixed link and added link

--- a/docs/ssjs/snippets/sfmc-cloud-page-apps.mdx
+++ b/docs/ssjs/snippets/sfmc-cloud-page-apps.mdx
@@ -578,7 +578,7 @@ There was much information to digest, so it's time for a streamlined step by ste
     1. Refresh tab with Marketing Cloud.
     2. On the main menu pane of Marketing Cloud, hover over AppExchange to see your application.
 5. __Secured Template__
-    1. Copy the [template](#secured-cloud-app-template) in the prefered language to the Cloud Page from step 2.i.
+    1. Copy the [template](#secured-cloud-page-app-template) in the prefered language to the Cloud Page from step 2.i.
     2. Update the unique values in the variables at the top part of the template (CAPS_LOCK placeholders).
 6. __Build your solution__
 
@@ -590,3 +590,4 @@ Looking for more? Check out follow up materials for added context and deeper div
 2. Webinar recording on [Architecting Web Solutions in SFMC](../../webinars/sfmc-webinar-architecting-web-solutions.mdx).
 3. Article on [Power of SFMC Code Resources](../../config/sfmc-code-resource.mdx).
 4. Article on [SFMC AppExchange Solutions](../../config/sfmc-appexchange-solutions.mdx).
+5. Code Snippets on [my GitHub](https://github.com/MateuszDabrowski/sfmc-cloud-page-app-template).
