Assets and updates for IS Serverside Code guide

--- a/docs/interaction-studio/is-serverside-code-in-campaigns.mdx
+++ b/docs/interaction-studio/is-serverside-code-in-campaigns.mdx
@@ -1,9 +1,9 @@
 ---
 id: is-serverside-code-in-campaigns
 title: Serverside Code in IS Campaigns
-sidebar_label: Serverside Code in Campaigns
+sidebar_label: Serverside Code
 description: ""
-image: img/og/og-image-is-serverside-code-in-campaigns.png
+image: img/og/og-image-interaction-studio-serverside-code.png
 tags: [Interaction Studio, Personalisation, TypeScript]
 
 ---
